@@ -1,4 +1,10 @@
 
+2018-05-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* typeck.c (cb_check_overlapping): resolve one-level subscripts
+	  for checking and warn if both subscripts reference the same
+	  variable or numeric value
+
 2018-05-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	Fixed Bug #521 - issues with source cache:
